2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b46

 * Change: Unified and nicified tools/* and usage.php

 * Fix: Added missing entries in po/filelist-core

2007-03-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b45

 * Fix: Set correct chmod for captcha tempfolder.
   Thanks to Peter Schumacher.   

2007-03-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b44

 * Change: Make all popups per default 550px wide when using popup_link()

 * Change Use of accesskeys and wording in ecard form.

2007-03-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b43

 * New: Added functionality to rebuild capture dates.

 * Fix: Don't strip Port from Urls

 * Change: Some minore layout things.

2007-03-01 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b42

 * Fix: Moved inclusion of page header on mainpage before some javascripts
        to avoid warnings when embedded.
        
 * Fix: Created function showDebugInfo() that show the debug info box.
        Sourced it out into util.php from
        templates/overall.header.tpl.default
        
2007-02-27 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b41

 * Fix: Use of fs_executable() at various places.
 
 * Change: Made IM Version a static var.
 
 * Fix: On some Cameras (e.g. some SONY), jhead and exiftags
        extracts some fields double and thus an reliable extraction 
        fails.
                 
   Thanks to Marcio Marchini for reporting an issue with this.
   
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b40

 * Change: Put album description in its own box in thumbs view.
 
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b39

 * Fix: Added missing files to po/filelist-core, adjust pot files.
 
 * Fix: Typo in css/yui/container.css
 
 * Change: Use of nl2br() in editField(), e.g. album description.
 
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b38

 * Fix/Change: Add new param $useAccesskey to galleryIconLink()
   - If set to no, an existing accesskey identifier is just removed,
   	 but not used.