@@ -1,3 +1,10 @@
+2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b47
+
+ * New: Added 3|4 Ratio for cropping
+
+ * Change: Outsourced ratio defintion into
+           includes/definitions/cropOptions.php
+
 2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b46
 
  * Change: Unified and nicified tools/* and usage.php
